tests/negative/semantic/wrong_arg_count_execstdout/input.ci
void main() {
    print(toString(execStdout()) + "\n");
}
